fix: Fix progress bar not showing progress in dark mode bug
This bug is caused by the conflict of css. dark-progress and progress classes
are both changing progress bar colour. Now dark-progress class has higher
priority so the progress bar can shows the progress.

--- a/css/core.css
+++ b/css/core.css
@@ -117,7 +117,7 @@ h1 {
 }
 
 .dark-progress {
-    background-color: #414141;
+    background-color: #414141 !important;
 }
 
 /*------------------------------------------------*/
